option('resource_path', type: 'string', value: 'auto',
  description: 'REAPER resource path where to install ReaImGui or "auto"')

option('bindings', type: 'array', choices: ['cpp', 'human', 'python'],
  description: 'Generate language bindings')
option('shims', type: 'array', choices: ['lua'],
  description: 'Generate backward compatibility shims')
option('tests', type: 'feature', value: 'enabled',
  description: 'Build the test suite')
