api_sources = files([
  'button.cpp',
  'coloredit.cpp',
  'context.cpp',
  'dragndrop.cpp',
  'drawlist.cpp',
  'font.cpp',
  'function.cpp',
  'image.cpp',
  'indev.cpp',
  'input.cpp',
  'internal.cpp',
  'item.cpp',
  'layout.cpp',
  'listclipper.cpp',
  'menu.cpp',
  'plot.cpp',
  'popup.cpp',
  'select.cpp',
  'slider.cpp',
  'style.cpp',
  'tabbar.cpp',
  'table.cpp',
  'text.cpp',
  'textfilter.cpp',
  'treenode.cpp',
  'utility.cpp',
  'viewport.cpp',
  'window.cpp',
])

api = static_library('api', api_sources, dependencies: [common_dep])
